--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>homework</title>
 </head>
 <body>
-    <script src="index.js"></script>
     alert(Vlada)
+    <script src="one-home.js"></script>
+    <script src="two-home.js"></script>
 </body>
 </html>
