--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     alert(Vlada)
     <script src="one-home.js"></script>
     <script src="two-home.js"></script>
+    <script src="three-home.js"></script>
 </body>
 </html>
